Fix string/koloreak bilatzaialean. # erabiliz bereiziko da Referentzia eta bilatu behar ez duen testua. Adib 3CI00099#nahidutentextua

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -49,10 +49,10 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <table>
+                                            <table class="erdikotabla">
                                                 <tr ng-repeat="turnos in egunak.linea1">
                                                     <td>
-                                                        <table>
+                                                        <table class="azkentabla">
                                                             <tbody>
                                                             <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1">
                                                                 <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;">
@@ -85,10 +85,10 @@
                                             </table>
                                         </td>
                                         <td>
-                                            <table>
+                                            <table class="erdikotabla">
                                                 <tr ng-repeat="turnos in egunak.linea1">
                                                     <td>
-                                                        <table>
+                                                        <table class="azkentabla">
                                                             <tbody>
                                                             <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2">
                                                                 <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;">
@@ -120,10 +120,10 @@
                                             </table>
                                         </td>
                                         <td>
-                                            <table>
+                                            <table class="erdikotabla">
                                                 <tr ng-repeat="turnos in egunak.linea1">
                                                     <td>
-                                                        <table>
+                                                        <table class="azkentabla">
                                                             <tbody>
                                                             <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3">
                                                                 <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;">
@@ -174,10 +174,10 @@
                                 <tbody>
                                 <tr>
                                     <td>
-                                        <table>
+                                        <table class="erdikotabla">
                                             <tr ng-repeat="turnos in egunak.linea2">
                                                 <td>
-                                                    <table>
+                                                    <table class="azkentabla">
                                                         <tbody>
                                                         <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1">
                                                             <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;">
@@ -209,10 +209,10 @@
                                         </table>
                                     </td>
                                     <td>
-                                        <table>
+                                        <table class="erdikotabla">
                                             <tr ng-repeat="turnos in egunak.linea2">
                                                 <td>
-                                                    <table>
+                                                    <table class="azkentabla">
                                                         <tbody>
                                                         <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2">
                                                             <td  style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;">
@@ -244,10 +244,10 @@
                                         </table>
                                     </td>
                                     <td>
-                                        <table>
+                                        <table class="erdikotabla">
                                             <tr ng-repeat="turnos in egunak.linea2">
                                                 <td>
-                                                    <table>
+                                                    <table class="azkentabla">
                                                         <tbody>
                                                         <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3">
                                                             <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;">
