--- a/static/pages/egutegia.html
+++ b/static/pages/egutegia.html
@@ -1,3 +1,4 @@
 
 <div class="row">&nbsp;</div>
-<div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+
+<div ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="events"></div>
