--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -63,6 +63,7 @@
                                                                             data-turno="1"
                                                                             data-linea="1"
                                                                             editable-text="orden.ref"
+                                                                            ng-bind-html="orden.ref"
                                                                             onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
                                                                     <!--</div>-->
                                                                 </td>
@@ -79,6 +80,7 @@
                                                                 data-turno="1"
                                                                 data-linea="1"
                                                                 editable-text="orden.ref"
+                                                                ng-bind-html="orden.ref"
                                                                 onbeforesave="addData($data, this)">+</span>
                                                     </td>
                                                 </tr>
@@ -98,6 +100,7 @@
                                                                               data-turno="2"
                                                                               data-linea="1"
                                                                               editable-text="orden.ref"
+                                                                              ng-bind-html="orden.ref"
                                                                               onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
 
                                                                 </td>
@@ -114,6 +117,7 @@
                                                             data-turno="2"
                                                             data-linea="1"
                                                             editable-text="orden.ref"
+                                                            ng-bind-html="orden.ref"
                                                             onbeforesave="addData($data, this)">+</span>
                                                     </td>
                                                 </tr>
@@ -133,6 +137,7 @@
                                                                               data-turno="3"
                                                                               data-linea="1"
                                                                               editable-text="orden.ref"
+                                                                              ng-bind-html="orden.ref"
                                                                               onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
 
                                                                 </td>
@@ -149,6 +154,7 @@
                                                           data-turno="3"
                                                           data-linea="1"
                                                           editable-text="orden.ref"
+                                                          ng-bind-html="orden.ref"
                                                           onbeforesave="addData($data, this)">+</span>
                                                     </td>
                                                 </tr>
@@ -205,6 +211,7 @@
                                                               data-turno="1"
                                                               data-linea="2"
                                                               editable-text="orden.ref"
+                                                              ng-bind-html="orden.ref"
                                                               onbeforesave="addData($data, this)">+</span>
                                                 </td>
                                             </tr>
@@ -224,6 +231,7 @@
                                                                           data-turno="2"
                                                                           data-linea="2"
                                                                           editable-text="orden.ref"
+                                                                          ng-bind-html="orden.ref"
                                                                           onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
 
                                                             </td>
@@ -240,6 +248,7 @@
                                                           data-turno="2"
                                                           data-linea="2"
                                                           editable-text="orden.ref"
+                                                          ng-bind-html="orden.ref"
                                                           onbeforesave="addData($data, this)">+</span>
                                                 </td>
                                             </tr>
@@ -259,6 +268,7 @@
                                                                           data-turno="3"
                                                                           data-linea="2"
                                                                           editable-text="orden.ref"
+                                                                          ng-bind-html="orden.ref"
                                                                           onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
 
                                                             </td>
@@ -275,6 +285,7 @@
                                                           data-turno="3"
                                                           data-linea="2"
                                                           editable-text="orden.ref"
+                                                          ng-bind-html="orden.ref"
                                                           onbeforesave="addData($data, this)">+</span>
                                                 </td>
                                             </tr>
