Aste zenbakia idatzi vistan

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -20,7 +20,7 @@
                 <table class="table table-condensed">
                     <thead>
                     <tr>
-                        <th></th>
+                        <th>Semana {{ astea }}</th>
                         <th class="text-center" ng-model="eguna1">{{ eguna1 | date : 'yyyy/MM/dd'}}</th>
                         <!-- <th class="text-center">&nbsp;</th> -->
                         <th class="text-center" ng-model="eguna2">{{ eguna2 | date : 'yyyy/MM/dd'}}</th>
